# fcitx5-pinyin-arknights

./: .gitignore  ATTRIBUTION.md  LICENSE  README.md  VERSION  an_abnormal.py  an_activity_v2.py  an_all.py  an_branch.py  an_character.py  an_clothes.py  an_collection_1.py  an_collection_2.py  an_collection_3.py  an_collection_4.py  an_collection_5.py  an_collection_6.py  an_enermy.py  an_isw.py  an_item.py  an_material.py  an_operator.py  an_other.py  an_real_name.py  an_skill.py  an_summons.py  an_term.py  an_terra.py  build.py  constant.py  custom_tweaks.py  fixfile.json  prts.py  prts_abnormal.py  prts_activity.py  prts_activity_v2.py  prts_all.py  prts_branch.py  prts_character.py  prts_clothes.py  (+20 more)
.github/workflows/: update_dict.yml
conf/: an_activity_v2.py  an_character.py  an_clothes.py  an_collection_2.py  an_operator.py  an_other.py  an_skill.py  an_summons.py  an_terra.py
data/: changes.md  fixfile.json
data/fcitx5_dicts/: an_all.dict  an_character.dict  an_clothes.dict  an_collection_2.dict  an_collection_3.dict  an_collection_4.dict  an_collection_5.dict  an_collection_6.dict  an_enemy.dict  an_enermy.dict  an_isw.dict  an_item.dict  an_operator.dict  an_real_name.dict  an_skill.dict  (+1 more)
input/: an_other_titles.txt  prts_other_titles.txt
script/: build.sh  char_counter.py  check_version.py  clean.sh  compare_dicts.py  extend_dictionaries.py  label.sh  log.sh  prts_character.py  prts_collection_1.py  prts_collection_2.py  prts_collection_3.py  prts_collection_4.py  prts_collection_5.py  prts_operator_extend.py  prts_real_name.py  prts_terra.py
(+88 files in other folders)
